# pulsar

./: .gitignore  Anchor.toml  Cargo.toml  PROJECT_STRUCTURE.md  README.md  package-lock.json  package.json  tsconfig.json
api/: .env.example  README.md  jest.config.js  package.json
api/coverage/: clover.xml  coverage-final.json  lcov.info
api/coverage/lcov-report/: index.html
api/src/: index.ts
api/src/middleware/: auth.ts  rateLimit.ts
api/src/routes/: data.ts  payment.ts
api/src/services/: accountData.ts  dataAggregator.ts  dataService.ts  liquidationCalculator.ts  metaplexHelper.ts  oracleDataMapper.ts  riskModel.ts  (+3 more)
api/tests/: README.md  auth.test.ts  data.test.ts  error-handling.test.ts  example.test.ts  health.test.ts  payment.test.ts  setup.ts  x402.test.ts
client/: README.md  package.json
client/src/: index.ts
docs/: ARCHITECTURE.md  CREATE_TOKEN_ACCOUNT.md  DEMO.md  DEPLOYMENT.md  FRONTEND.md  FRONTEND_TESTING.md  INTEGRATION_PLAN.md  INTEGRATION_SUMMARY.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASE6_COMPLETE.md  QUICKSTART.md  QUICK_FIX_TOKEN_ACCOUNT.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
programs/pulsar_payment/: Cargo.toml
programs/pulsar_payment/src/: lib.rs
scripts/: build.sh  check-devnet.sh  create-token-account.sh  demo.sh  deploy.sh  setup-devnet.sh  setup-test-env.sh  start-validator.sh  stop-validator.sh  test.sh
tests/: payment.test.ts  setup.ts
(+15 files in other folders)
